--- a/UnzipperFileAPI/Properties/launchSettings.json
+++ b/UnzipperFileAPI/Properties/launchSettings.json
@@ -31,6 +31,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "DockerfileRunArguments": "-v media:/media",
       "publishAllPorts": true,
       "useSSL": true
     }
